--- a/package.json
+++ b/package.json
@@ -3,6 +3,24 @@
   "displayName": "Prettier Config Boilerplate",
   "description": "A template config for prettier config files using snippets. Available in JSON, JS, YAML and TOML files.",
   "version": "1.0.0",
+  "publisher": "Martín Valdez",
+  "icon": "images/icon.png",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/martinval11/vsc-prettier-config-boilerplate"
+  },
+  "keywords": [
+    "prettier",
+    "prettier snippets",
+    "snippet",
+    "snippets",
+    "boilerplate"
+  ],
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/martinval11/vsc-prettier-config-boilerplate/issues"
+  },
+  "homepage": "https://github.com/martinval11/vsc-prettier-config-boilerplate",
   "engines": {
     "vscode": "^1.85.0"
   },
