--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "prettier-config-boilerplate",
   "displayName": "Prettier Config Boilerplate",
   "description": "A template config for prettier config files using snippets. Available in JSON, JS, YAML and TOML files.",
-  "version": "1.0.0",
-  "publisher": "Martín Valdez",
+  "version": "1.0.1",
+  "publisher": "MartinValdez",
   "icon": "images/icon.png",
   "repository": {
     "type": "git",
